--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html {
     color: #cad3d6;
     min-height: 100%;
-    background: -webkit-gradient(linear , 0 100, 0 98%, from(#789346), to(#000309) );
-    background-color: #789;
+    background: -webkit-gradient(linear , 0 100, 0 98%, rom(#798000), to(#000309) );
+    background-color: #798;
     padding: 0;
     margin: 0;
 }
