--- a/style.css
+++ b/style.css
@@ -196,8 +196,8 @@ textarea {
     border-radius: 0 0 1px 1px;
     -moz-border-radius: 0 0 1px 1px;
     color: #999;
-    background: #0C1F2C;
-    background: rgba(10,30,40,0.85);
+    background: #202020;
+    background: #202020;
     padding: 12px;
     box-shadow: 0 1px 8px #000;
     -webkit-box-shadow: 0 1px 8px #000;
