--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     color: #cad3d6;
     min-height: 100%;
-    background: -webkit-gradient(linear , 0 100, 0 98%, rom(#000111), to(#202020) );
+    background: -webkit-gradient(linear , 0 100, 0 98%, from(#000111), to(#202020) );
     background-color: #202;
     padding: 0;
     margin: 0;
