--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html {
-    color: #cad3d6;
+    color: #000000;
     min-height: 100%;
     background: -webkit-gradient(linear , 0 100, 0 98%, from(#163346), to(#000309) );
-    background-color: #123;
+    background-color: #EEFFFF;
     padding: 0;
     margin: 0;
 }
