--- a/style.css
+++ b/style.css
@@ -275,23 +275,17 @@ textarea {
     list-style: none;
     margin-right: 10px;
 }
-#top-nav a{
+
+#top-nav a {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 1px;
+    box-shadow: 0 1px 3px #000000;
+    color: #000000;
     display: block;
     padding: 6px 20px;
-    background: #022538;
-    background-color: rgba(8,32,50,0.85);
-    background: -webkit-gradient(linear, 0 0, 0 90%, from(rgba(12,46,65,0.7)), to(rgba(0,35,54,0.9)));
-    border: 1px solid #3A4D5B;
-    border: 1px solid rgba(255,255,255,0.2);
-    border-radius: 1px;
-    -moz-border-radius: 1px;
-    color: #abc;
-    text-shadow: 0 1px 0 #000;
-    box-shadow: 0 1px 3px rgba(10,10,0,0.6);
-    -webkit-box-shadow: 0 1px 3px rgba(10,10,0,0.6);
-    -moz-box-shadow: 0 1px 3px rgba(10,10,0,0.6);
-    -webkit-transition: all 0.45s linear;
-    -moz-transition: all 0.45s linear;
+    text-shadow: 0 1px 0 #000000;
+    transition: all 0.45s linear 0s;
 }
 
 #top-nav a:hover, #top-nav a:focus {
