--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     color: #000000;
     min-height: 100%;
     background: -webkit-gradient(linear , 0 100, 0 98%, from(#163346), to(#000309) );
-    background-color: #EEFFFF;
+    background-color: #FFFFFF;
     padding: 0;
     margin: 0;
 }
