--- a/style.css
+++ b/style.css
@@ -304,12 +304,13 @@ textarea {
     text-align: center;
 }
 
-#footer p{
-    background: #341D36;
-    background: rgba(255,0,80,0.15);
-    padding: 1em;
+
+#footer p {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
     margin: 0;
+    padding: 1em;
 }
+
 #footer a{
     color: #967;
 }
