--- a/style.css
+++ b/style.css
@@ -191,40 +191,34 @@ textarea {
 }
 
 .toc {
-    display: none;
-    overflow: auto;
-    overflow-x: hidden;
-    border: 1px solid #F0C81E;
+    background: none repeat scroll 0 0;
+    border: 1px solid #999999;
     border-radius: 0 0 1px 1px;
-    -moz-border-radius: 0 0 1px 1px;
-    color: #999;
-    background: #0C1F2C;
-    background: rgba(10,30,40,0.85);
+    box-shadow: 0 1px 8px #000000;
+    color: #999999;
+    display: none;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 12px;
-    box-shadow: 0 1px 8px #000;
-    -webkit-box-shadow: 0 1px 8px #000;
-    -moz-box-shadow: 0 1px 8px #000;
 }
-
 .tocWrap .toggler {
-    text-align: center;
-    font-size: 12px;
-    background: #000000;
+    background: none repeat scroll 0 0 #000000;
     border-radius: 2px 2px 0 0;
-    -moz-border-radius: 2px 2px 0 0;
     color: #FFFFFF;
-    position: relative;
-    z-index: 101;
     cursor: pointer;
+    font-size: 12px;
+    position: relative;
+    text-align: center;
+    z-index: 101;
 }
 .toc ul {
     margin: 0;
 }
 .toc li {
-    color: #eff;
+    color: #002222;
 }
 .toc a {
-    color: #eff;
+    color: #002222;
 }
 
 .todo {
