--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ div.gsc-clear-button {
     background: rgba(140,180,255,0.1);
     border: 1px solid #134;
     padding: 4px 5px;
-    color: #eef;
+    color: #444;
     outline: 0;
     width: 12em;
 }
