--- a/style.css
+++ b/style.css
@@ -370,18 +370,16 @@ div.gsc-clear-button {
 #cse .gsc-control-cse div {
 }
 #cse .gsc-control-cse div.gsc-resultsbox-visible {
-    width: 61.8%;
-    position: absolute;
-    z-index: 300;
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.88);
+    border: 0 solid rgba(0, 0, 0, 0);
+    color: #888888;
+    outline: 2px solid #999999;
+    padding: 60px;
+    position: static;
     right: -5px;
     top: 50px;
-    background: #E3E6E8;
-    background: rgba(255,255,255,0.88);
-    border: 5px solid #125C39;
-    border: 0 solid rgba(0,0,0,0);
-    outline: 5px solid rgba(10,190,30,0.3);
-    color: #222;
-    padding: 15px;
+    width: 78%;
+    z-index: 300;
 }
 #cse .gs-result .gs-title, .gs-result .gs-title *{
     text-decoration: none;
